--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Simple Sidebar Nav</title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+
+<!-- Sidebar -->
+<nav class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:250px;" id="mySidebar">
+  <h3 class="w3-bar-item">LOGO</h3>
+  <a href="#" class="w3-bar-item w3-button">Shirts</a>
+  <a href="#" class="w3-bar-item w3-button">Dresses</a>
+  <a href="#" class="w3-bar-item w3-button" onclick="toggleJeans()">Jeans <i class="fa fa-caret-down"></i></a>
+  <div id="jeansMenu" class="w3-hide w3-container">
+    <a href="#" class="w3-bar-item w3-button">Skinny</a>
+    <a href="#" class="w3-bar-item w3-button">Bootcut</a>
+  </div>
+  <a href="#" class="w3-bar-item w3-button">Contact</a>
+</nav>
+
+<!-- Overlay for small screens -->
+<div class="w3-overlay w3-hide-large" onclick="closeSidebar()" id="myOverlay"></div>
+
+<!-- Top bar for mobile -->
+<div class="w3-bar w3-top w3-hide-large w3-black">
+  <button class="w3-bar-item w3-button" onclick="openSidebar()"><i class="fa fa-bars"></i> Menu</button>
+</div>
+
 <script>
-// Accordion 
-function myAccFunc() {
-  var x = document.getElementById("demoAcc");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
+  function toggleJeans() {
+    const x = document.getElementById("jeansMenu");
+    x.classList.toggle("w3-hide");
   }
-}
 
-// Click on the "Jeans" link on page load to open the accordion for demo purposes
-document.getElementById("myBtn").click();
+  function openSidebar() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+  }
 
-
-// Open and close sidebar
-function w3_open() {
-  document.getElementById("mySidebar").style.display = "block";
-  document.getElementById("myOverlay").style.display = "block";
-}
- 
-function w3_close() {
-  document.getElementById("mySidebar").style.display = "none";
-  document.getElementById("myOverlay").style.display = "none";
-}
+  function closeSidebar() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none";
+  }
 </script>
 
 </body>
