--- a/index.html
+++ b/index.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Simple Sidebar Nav</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <title>Fixed Top Bar</title>
+  <style>
+    .fixed-top {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background-color: #333;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+
+    body {
+      margin: 0;
+      padding-top: 100px; /* offset to prevent content from being hidden */
+    }
+
+    .content {
+      height: 2000px; /* just to demonstrate scrolling */
+      background: linear-gradient(#eee, #ccc);
+    }
+  </style>
 </head>
 <body>
 
-<!-- Sidebar -->
-<nav class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:250px;" id="mySidebar">
-  <h3 class="w3-bar-item">LOGO</h3>
-  <a href="#" class="w3-bar-item w3-button">Shirts</a>
-  <a href="#" class="w3-bar-item w3-button">Dresses</a>
-  <a href="#" class="w3-bar-item w3-button" onclick="toggleJeans()">Jeans <i class="fa fa-caret-down"></i></a>
-  <div id="jeansMenu" class="w3-hide w3-container">
-    <a href="#" class="w3-bar-item w3-button">Skinny</a>
-    <a href="#" class="w3-bar-item w3-button">Bootcut</a>
+  <div class="fixed-top">
+    I stay at the top!
   </div>
-  <a href="#" class="w3-bar-item w3-button">Contact</a>
-</nav>
 
-<!-- Overlay for small screens -->
-<div class="w3-overlay w3-hide-large" onclick="closeSidebar()" id="myOverlay"></div>
-
-<!-- Top bar for mobile -->
-<div class="w3-bar w3-top w3-hide-large w3-black">
-  <button class="w3-bar-item w3-button" onclick="openSidebar()"><i class="fa fa-bars"></i> Menu</button>
-</div>
-
-<script>
-  function toggleJeans() {
-    const x = document.getElementById("jeansMenu");
-    x.classList.toggle("w3-hide");
-  }
-
-  function openSidebar() {
-    document.getElementById("mySidebar").style.display = "block";
-    document.getElementById("myOverlay").style.display = "block";
-  }
-
-  function closeSidebar() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("myOverlay").style.display = "none";
-  }
-</script>
+  <div class="content">
+    Scroll down to see me stick around.
+  </div>
 
 </body>
 </html>
