--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-  <div class="fixed-top">
-    I stay at the top!
+  <div class="topnav">
+    <img src="logo.png"/>
+    <div>I stay at the top!</div>
   </div>
 
   <div class="content">
