--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fixed Top Bar</title>
+  <title>Test Site</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
