--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="topnav">
     <img src="logo.png"/>
-    <div>I stay at the top!</div>
+    <div>HopSpot</div>
   </div>
 
   <div class="content">
