--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="topnav">
-    <img src="logo.png" style="margin: 0 10px 0 0;"/>
+    <img src="IMG_9030.jpeg" style="margin: 0 10px 0 0;"/>
     <div>HopSpot</div>
   </div>
 
