--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </div>
 
   <div class="content">
-    Scroll down to see me stick around.
+    <div class="banner">
+    You're giving feedback on a new wecmb site
+  </div>
   </div>
 
 </body>
