--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HopSpot2</title>
+  <title>HopSpot</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="topnav">
-    <img src="IMG_9030.jpeg" width="75" height="75" alt="Logo" style="margin: 0 100px 0 0;"/>
+    <img src="IMG_9030.jpeg" width="75" height="75" alt="Logo" style="margin: 0 50px 0 0;"/>
     <div>HopSpot</div>
   </div>
 
