--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="topnav">
     <img src="IMG_9030.jpeg" width="75" height="75" alt="Logo" style="margin: 0 50px 0 0;"/>
-    <div>HopSpot</div>
+    <div>HopSpot viewport</div>
   </div>
 
   <div class="content">
