--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
   <div class="topnav">
-    <img src="IMG_9030.jpeg" width="75" height="75" alt="Logo" style="margin: 0 50px 0 0;"/>
-    <div>HopSpot viewport</div>
+    <img src="IMG_9030.jpeg" width="50" height="50" alt="Logo" style="margin: 0 50px 0 0;"/>
+    <div>HopSpot</div>
   </div>
 
   <div class="content">
