--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="topnav">
-    <!-- <img src="IMG_9030.jpeg" width="50" height="50" alt="Logo" style="margin: 0 50px 0 0;"/> -->
+    <img src="IMG_9030.jpeg" alt="Logo" class="logo" />
     <div>HopSpot</div>
   </div>
 
