--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="topnav">
     <img src="IMG_9030.jpeg" alt="Logo" class="logo" />
-    <div class="title">HopSpot!</div>
+    <div class="title">HopSpot</div>
     <div class="burger">
       <span></span>
       <span></span>
