--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <div class="topnav">
     <img src="IMG_9030.jpeg" alt="Logo" class="logo" />
     <div class="title">HopSpot2</div>
-    <div class="burger">
+    <!-- <div class="burger">
       <span></span>
       <span></span>
       <span></span>
-    </div>
+    </div> -->
   </div>
 
   <div class="content">
