--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-  <div class="topnav"><!--
+  <div class="topnav">
     <img src="IMG_9030.jpeg" alt="Logo" class="logo" />
     <div class="title">HopSpot4</div>
      <div class="burger">
       <span></span>
       <span></span>
       <span></span>
-    </div> -->
+    </div>
   </div>
 
   <div class="content">
