--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="content">
     <div class="banner">
-    You're giving feedback on a new wecmb site
+     This is a work in progress
   </div>
   </div>
 
