--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="content">
     <div class="banner">
-     This is a work in progress (600)
+     What are you doing tonight?
   </div>
   </div>
 
