--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <div class="banner">
      What are you doing tonight?
   </div>
-  <div>HopSpot provides real time updates of venues and </div>
+  <div class="subbanner">
+    HopSpot provides real time updates of venues and 
+  </div>
   </div>
 
 </body>
