--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      What are you doing tonight?
   </div>
   <div class="subbanner">
-    HopSpot provides real time updates of venues and 
+    HopSpot provides real time updates of venues and other stuff
   </div>
   </div>
 
