--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </div>
   <div class="subbanner">
     HopSpot provides real time updates of venues and other stuff
+    here are some more words
   </div>
   </div>
 
