--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     HopSpot provides real time updates of venues and other stuff
     here are some more words
   </div>
+  
+  <div class="text-replaceme">
+    HopSpot provides real time updates of venues and other stuff
+    here are some more words
   </div>
-
 </body>
 </html>
