--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     here are some more words
   </div>
   
+  <div class="image-wrapper">
+    <img src="your-image.jpg" alt="Image with Black Fade">
+  </div>
   <div class="text-replaceme">
     HopSpot provides real time updates of venues and other stuff
     here are some more words
