--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   
   <div class="image-wrapper">
-    <img src="your-image.jpg" alt="Image with Black Fade">
+    <img src="IMG_9052.jpg" alt="Image with Black Fade">
   </div>
   <div class="text-replaceme">
     HopSpot provides real time updates of venues and other stuff
