--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img src="IMG_9052.jpg" alt="Image with Black Fade">
   </div>
   <div class="text-replaceme">
-    HopSpot provides real time updates of venues and other stuff
+    See things on a map and whatnot and venues and other stuff
     here are some more words
   </div>
 </body>
