--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   
   <div class="image-wrapper">
-    <img src="IMG_9052.jpg" alt="Image with Black Fade">
+    <img src="IMG_9052.jpeg" alt="Image with Black Fade">
   </div>
   <div class="text-replaceme">
     See things on a map and whatnot and venues and other stuff
