--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="text-replaceme">
     See things on a map and whatnot and venues and other stuff
-    here are some more words
+    and cab view promotions also
   </div>
 </body>
 </html>
