--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
   </div>
   <div class="text-replaceme">
     See things on a map and whatnot and venues and other stuff
-    and cab view promotions also
+    and cab view promotions also. There is much more 
+    text to be written here but yeah.
   </div>
 </body>
 </html>
