--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="topnav">
-    <img src="IMG_9030.jpeg" alt="Logo" class="logo" />
+    <img src="Logo=Default.png" alt="Logo" class="logo" />
     <div class="title">HopSpot</div>
      <div class="burger" onclick="toggleMenu()">
       <span></span>
