--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
     here are some more words
   </div>
   
+  <div class="store-buttons">
+    <!-- App Store Button -->
+    <a href="https://www.apple.com/app-store/" target="_blank" class="store-button">
+      <img src="app-store-icon.png" alt="Download on the App Store">
+    </a>
+    
+    <!-- Google Play Store Button -->
+    <a href="https://play.google.com/store" target="_blank" class="store-button">
+      <img src="play-store-icon.png" alt="Get it on Google Play">
+    </a>
+  </div>
+  
   <div class="image-wrapper">
     <img src="IMG_9052.jpeg" alt="Image with Black Fade">
   </div>
