--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="store-buttons">
     <!-- App Store Button -->
     <a href="https://www.apple.com/app-store/" target="_blank" class="store-button">
-      <img src="app-store-icon.png" alt="Download on the App Store">
+      <img src="app-store-icon.svg" alt="Download on the App Store">
     </a>
     
     <!-- Google Play Store Button -->
