--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="nav-menu" id="navMenu">
     <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Become a Vendor</a>
+    <a href="Vendors.html">Become a Vendor</a>
     <a href="#">Contact Us</a>
   </div>
   <script>
