--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <!-- Navigation menu -->
   <div class="nav-menu" id="navMenu">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="#">About</a>
     <a href="Vendors.html">Become a Vendor</a>
     <a href="#">Contact Us</a>
